additional template files

--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,5 +1,5 @@
 <!-- CMR/templates/customers.html -->
-{% extends "base.html" %}
+{% extends "base/main.html" %}
 {% block title %}
   {{block.super}}: Customer List
 {% endblock %}
