--- a/templates/member.html
+++ b/templates/member.html
@@ -1,5 +1,5 @@
 <!-- CMR/templates/member.html -->
-{% extends "base.html" %}
+{% extends "base/main.html" %}
 {% block title %}
   {{block.super}}: Member Details
 {% endblock %}
