--- a/CMR/static/assets/css/main.css
+++ b/CMR/static/assets/css/main.css
@@ -5,6 +5,9 @@
 	Slate by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
+	====================================
+	This theme has been customized for CMR to work
+	with Django and Wagtail CMS by Martin Lanser
 */
 
 html, body, div, span, applet, object,
@@ -2396,7 +2399,8 @@ input, select, textarea {
 		}
 
 		.image.left, .image.right {
-			max-width: 40%;
+			/* max-width: 40%; */
+			max-width: 33%;
 		}
 
 			.image.left img, .image.right img {
