--- a/base/templates/base/includes/footer_text.html
+++ b/base/templates/base/includes/footer_text.html
@@ -1,12 +1,4 @@
 {% load wagtailcore_tags %}
-
-<footer id="footer">
-	<div class="inner">
-		<p class="copyright">&copy; 1973-{% now "Y" %} Carolina Model Railroaders. All rights reserved. {{ footer_text|richtext }}</p>
-		<ul class="menu">
-			<li><a href="#">Terms<span> of Use</span></a></li>
-			<li><a href="#">Privacy<span> Policy</span></a></li>
-			<li><a href="#">Legal<span> Information</span></a></li>
-		</ul>
-	</div>
-</footer>
+{% if footer_text %}
+<p class="footertext">{{ footer_text|richtext }}</p>
+{% endif %}
