--- a/templates/base/main.html
+++ b/templates/base/main.html
@@ -7,7 +7,7 @@
 	This theme has been customized for CMR to work
 	with Django and Wagtail CMS by Martin Lanser
 -->
-{% load footer_tags static wagtailcore_tags wagtailuserbar %}
+{% load static wagtailimages_tags wagtailcore_tags wagtailuserbar wagtailmarkdown %}
 <html>
 	<head>
 		<title>
@@ -16,7 +16,7 @@
             {% endblock %}
             {% block title_suffix %}
             {% wagtail_site as current_site %}
-            {% if current_site and current_site.site_name %}- {{ current_site.site_name }}{% endif %}
+            {% if current_site and current_site.site_name %} - {{ current_site.site_name }}{% endif %}
             {% endblock %}
 		</title>
 		<meta charset="utf-8" />
@@ -44,138 +44,56 @@
 		<!-- Header -->
 		{% include "includes/header.html" %}
 
-		<!-- Banner -->
-		<section id="banner">
-			<article>
-				<img src="images/slide01.jpg" alt="" />
-				<div class="inner">
-					<h2><a href="#">Magna tempus. Sed feugiat.</a></h2>
-				</div>
-			</article>
-			<article>
-				<img src="images/slide02.jpg" alt="" />
-				<div class="inner">
-					<h2><a href="#">Aliquam veroeros nullam.</a></h2>
-				</div>
-			</article>
-			<article>
-				<img src="images/slide03.jpg"  alt="" />
-				<div class="inner">
-					<h2><a href="#">Consequat dolore adipiscing.</a></h2>
-				</div>
-			</article>
-		</section>
-
-		<!-- One -->
-		<section id="one" class="wrapper major-pad">
+		<!-- Main -->
+		<section id="main" class="wrapper sidebar right">
 			<div class="inner">
-				<section class="spotlight">
-					<div class="content">
-						<h2>Libero bibendum nullam vitae magna sed veroeros</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id interdum magna, ultricies aliquet curabitur sed metus pellentesque, ornare sapien quis.</p>
-					</div>
-					<span class="image"><img src="images/pic07.jpg" alt="" /></span>
-				</section>
-			</div>
-		</section>
 
-		<!-- Two -->
-		<section id="two" class="wrapper content-pad">
-			<div class="inner">
-				<div class="features">
-					<section class="content">
-						<span class="icon-wrapper major"><span class="icon solid fa-pencil-alt"></span></span>
-						<h3>Praesent sed donec</h3>
-						<p>Proin consequat luctus elit, nec blandit tellus ut volutpat magna. mi euismod elementum lectus et consequat etiam lorem etiam sed tempus. Feugiat veroeros lorem ipsum dolor.</p>
-					</section>
-					<section class="content">
-						<span class="icon-wrapper major"><span class="icon solid fa-paper-plane"></span></span>
-						<h3>Commodo mollis</h3>
-						<p>Pellentesque, ornare sapien quis, tristique ante. Proin nec facilisis odio. Integer elementum nunc nec leo interdum, non tristique eros laoreet. Integer vitae erat suscipit commodo.</p>
-					</section>
-					<section class="content">
-						<span class="icon-wrapper major"><span class="icon solid fa-cloud"></span></span>
-						<h3>Magnis curabitur</h3>
-						<p>Duis vulputate sit amet metus quis facilisis. Sed dapibus neque erat fringilla tincidunt. Nullam sapien et sapien, iaculis ac varius ultrices nec metus. Aenean ultricies magna.</p>
-					</section>
-				</div>
-			</div>
-		</section>
+				<header class="major">
+					<h2>{{ page.title }}</h2>
+					{% if page.showMeta %}
+					<p class="metadata">
+						<span class="icon solid fa-calendar-alt"></span><span class="date">{{ page.date }}</span>
+						{% with tags=page.tags.all %}
+							{% if tags %}
+							| <span class="icon solid fa-tags"></span>
+							{% for tag in tags %}
+								<a class="tags" href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+							{% endfor %}
+							{% endif %}
+						{% endwith %}
+						{% with authors=page.authors.all %}
+							{% if authors %}
+						 	| <span class="icon solid fa-user"></span>
+							{% for author in authors %}
+								<span class="author">{{ author.name }}</span>
+							{% endfor %}
+							{% endif %}
+						{% endwith %}
+					</p>
+					{% endif %}
+				</header>
 
-		<!-- Three -->
-		<section id="three" class="wrapper style2">
-			<div class="inner">
-				<h2>Etiam sed tellus</h2>
-				<div class="posts">
-					<section class="post">
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Congue portitor</h3>
-							<p>Aenean ultricies magna non sapien rhoncus, ac ullamcorper lorem convallis. Quisque at venenatis nisi, amet finibus mauris. Sed sodales ultricies eros, sit amet sodales sapien.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="post">
-						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Duis nisl euismod</h3>
-							<p>Ultrices nec metus. Aenean ultricies magna et sapien rhoncus ac ullamcorper lorem convallis. Quisque at venenatis nisi amet finibus mauris. Sed sodales ultricies magna etiam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="post">
-						<span class="image"><img src="images/pic03.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Elementum auctor</h3>
-							<p>Quis interdum. Lorem quis lacus justo. Sed libero condimentum vehicula sem vel, mattis amet mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi aliquam aenean.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="post">
-						<span class="image"><img src="images/pic04.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Urna vel lacinia</h3>
-							<p>Integer vel tincidunt lacus. Nulla augue nunc, eleifend quis leo ac, maximus interdum tellus. Etiam at vestibulum felis, id efficitur risus. Praesent ac nulla ex. Duis elementum.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="post">
-						<span class="image"><img src="images/pic05.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Neque et suscipit</h3>
-							<p>Libero condimentum, vehicula sem vel, mattis mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi in aliquam est. Aenean dapibus porttitor nulla ultrices venenatis.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
-					<section class="post">
-						<span class="image"><img src="images/pic06.jpg" alt="" /></span>
-						<div class="content">
-							<h3>Vestibulum placerat</h3>
-							<p>Tristique tellus et ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent mauris risus, pellentesque eu leo non, tincidunt.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</section>
+				<!-- Content -->
+				<div class="content">
+					{% with page.main_image as main_image %}
+						{% if main_image %}{% image main_image fill-160x100 %}{% else %}<a href="#" class="image fit"><img src="{% static 'images/pic07-1080x720.jpg' %}" alt="" /></a>{% endif %}
+					{% endwith %}
+					{{ page.body|markdown|safe }}
 				</div>
+
+				<!-- Sidebar -->
+				{% include "includes/sidebar.html" %}
+
 			</div>
 		</section>
 
 		<!-- Contact -->
+		{% if page.showContact %}
 		{% include "includes/contact.html" %}
+		{% endif %}
 
 		<!-- Footer -->
-		{% get_footer_text %}
+		{% include "includes/footer.html" %}
 
 		<!-- Scripts -->
 		<script src="{% static 'assets/js/jquery.min.js' %}"></script>
