--- a/templates/customer.html
+++ b/templates/customer.html
@@ -1,5 +1,5 @@
 <!-- CMR/templates/customer.html -->
-{% extends "base.html" %}
+{% extends "base/main.html" %}
 {% block title %}
   {{block.super}}: Customer Details
 {% endblock %}
