--- a/templates/members.html
+++ b/templates/members.html
@@ -1,5 +1,5 @@
 <!-- CMR/templates/members.html -->
-{% extends "base.html" %}
+{% extends "base/main.html" %}
 {% block title %}
   {{block.super}}: Member List
 {% endblock %}
