--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,5 @@
 <!-- CMR/templates/news.html -->
-{% extends "base.html" %}
+{% extends "base/main.html" %}
 {% block title %}
   {{block.super}}: News
 {% endblock %}
