--- a/templates/test.html
+++ b/templates/test.html
@@ -16,7 +16,7 @@
         <h2><a href="#">A lectus cras mi vis tortor cep dictum dui.<br />
         sed aenean nec luctus.</a></h2>
     </header>
-    <a href="#" class="image featured"><img src="{% static 'images/pic04.jpg' %}" alt="" /></a>
+    <a href="#" class="image featured"><img src="{% static 'images/pic04-1080x720.jpg' %}" alt="" /></a>
     <h3>A urna neque ut aenean?</h3>
     <p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
     ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
@@ -38,7 +38,7 @@
         <h2><a href="#">At vel enim, arcu ligula ut tempor
         sed augue dictum enim aenean</a></h2>
     </header>
-    <a href="#" class="image featured"><img src="{% static 'images/pic05.jpg' %}" alt="" /></a>
+    <a href="#" class="image featured"><img src="{% static 'images/pic05-1080x720.jpg' %}" alt="" /></a>
     <h3>Sed ornare varius velit non dui ante</h3>
     <p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
     ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
