--- a/home/templates/orig.home/home_page.html
+++ b/home/templates/orig.home/home_page.html
@@ -1,6 +1,15 @@
 {% extends "base/base.html" %}
 {% load static wagtailimages_tags wagtailcore_tags wagtailuserbar %}
 
+{% block extra_css %}
+{% comment %}
+<!-- ================================================================== -->
+Delete this entire EXTRA_CSS BLOCK if you want to remove the welcome screen!
+<!-- ================================================================== -->
+{% endcomment %}
+<link rel="stylesheet" href="{% static 'css/welcome_page.css' %}">
+{% endblock extra_css %}
+
 {% block page_body %}
 	{% wagtailuserbar %}
 
@@ -25,13 +34,22 @@
 		<div class="inner">
 			<div class="features {% if show_newsletter %}three{% else %}two{% endif %}">
 				{% include "includes/event-tiles.html" %}
-				{% if page.show_newsletter %}
+				{% if show_newsletter %}
 				{% include "includes/newsletter-tile.html" %}
 				{% endif %}
 			</div>
 		</div>
 	</section>
 	{% endif %}
+
+	{% block content %}
+	{% comment %}
+	<!-- ================================================================== -->
+	Delete this entire CONTENT BLOCK if you want to remove the welcome screen!
+	<!-- ================================================================== -->
+	{% endcomment %}
+	{% include 'home/welcome_page.html' %}
+	{% endblock content %}
 
 	<!-- Recent Content -->
 	{% if page.show_recent %}
