--- a/templates/base/main.html
+++ b/templates/base/main.html
@@ -1,110 +1,26 @@
-<!DOCTYPE HTML>
-<!--
-	Slate by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
-	====================================
-	This theme has been customized for CMR to work
-	with Django and Wagtail CMS by Martin Lanser
--->
-{% load static wagtailimages_tags wagtailcore_tags wagtailuserbar wagtailmarkdown %}
-<html>
-	<head>
-		<title>
-			{% block title %}
-            {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
-            {% endblock %}
-            {% block title_suffix %}
-            {% wagtail_site as current_site %}
-            {% if current_site and current_site.site_name %} - {{ current_site.site_name }}{% endif %}
-            {% endblock %}
-		</title>
-		<meta charset="utf-8" />
-        {% if page.search_description %}
-        <meta name="description" content="{{ page.search_description }}" />
-        {% endif %}
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+{% extends "base/base.html" %}
+{% load static wagtailimages_tags wagtailcore_tags wagtailuserbar %}
 
-        {# Force all links in the live preview panel to be opened in a new tab #}
-        {% if request.in_preview_panel %}
-        <base target="_blank">
-        {% endif %}
+{% block page_body %}
+	{% wagtailuserbar %}
 
-        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
-		<noscript>
-			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
-		</noscript>
-        {% block extra_css %}
-        {# Override this in templates to add extra stylesheets #}
-        {% endblock %}
-	</head>
-	<body class="is-preload {% block body_class %}{% endblock %}">
-        {% wagtailuserbar %}
+	<!-- Header -->
+	<header id="header">
+		{% include "includes/navbar.html" %}
+	</header>
 
-		<!-- Header -->
-		{% include "includes/header.html" %}
+	<!-- Banner -->
+	{% if page.show_banner %}
+	{% include "includes/banner.html" %}
+	{% endif %}
 
-		<!-- Main -->
-		<section id="main" class="wrapper sidebar right">
-			<div class="inner">
+	<!-- Main -->
+	{% block content %}
+	<!-- Content Placeholder -->
+	{% endblock %}
 
-				<header class="major">
-					<h2>{{ page.title }}</h2>
-					{% if page.showMeta %}
-					<p class="metadata">
-						<span class="icon solid fa-calendar-alt"></span><span class="date">{{ page.date }}</span>
-						{% with tags=page.tags.all %}
-							{% if tags %}
-							| <span class="icon solid fa-tags"></span>
-							{% for tag in tags %}
-								<a class="tags" href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
-							{% endfor %}
-							{% endif %}
-						{% endwith %}
-						{% with authors=page.authors.all %}
-							{% if authors %}
-						 	| <span class="icon solid fa-user"></span>
-							{% for author in authors %}
-								<span class="author">{{ author.name }}</span>
-							{% endfor %}
-							{% endif %}
-						{% endwith %}
-					</p>
-					{% endif %}
-				</header>
-
-				<!-- Content -->
-				<div class="content">
-					{% with page.main_image as main_image %}
-						{% if main_image %}{% image main_image fill-160x100 %}{% else %}<a href="#" class="image fit"><img src="{% static 'images/pic07-1080x720.jpg' %}" alt="" /></a>{% endif %}
-					{% endwith %}
-					{{ page.body|markdown|safe }}
-				</div>
-
-				<!-- Sidebar -->
-				{% include "includes/sidebar.html" %}
-
-			</div>
-		</section>
-
-		<!-- Contact -->
-		{% if page.showContact %}
-		{% include "includes/contact.html" %}
-		{% endif %}
-
-		<!-- Footer -->
-		{% include "includes/footer.html" %}
-
-		<!-- Scripts -->
-		<script src="{% static 'assets/js/jquery.min.js' %}"></script>
-		<script src="{% static 'assets/js/jquery.dropotron.min.js' %}"></script>
-		<script src="{% static 'assets/js/jquery.scrollex.min.js' %}"></script>
-		<script src="{% static 'assets/js/browser.min.js' %}"></script>
-		<script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
-		<script src="{% static 'assets/js/util.js' %}"></script>
-		<script src="{% static 'assets/js/main.js' %}"></script>
-        {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
-        {% endblock %}
-	</body>
-</html>
+	<!-- Contact -->
+	{% if show_contact_info %}
+	{% include "includes/contact.html" %}
+	{% endif %}
+{% endblock %}
