--- a/templates/debug/theme-elements.html
+++ b/templates/debug/theme-elements.html
@@ -12,6 +12,9 @@
 	<head>
 		<title>DEBUG - Elements</title>
 		<meta charset="utf-8" />
+        {% if page.search_description %}
+        <meta name="description" content="{{ page.search_description }}" />
+        {% endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
         {# Force all links in the live preview panel to be opened in a new tab #}
@@ -31,7 +34,7 @@
 
 		<!-- Header -->
 		<header id="header">
-		{% include "debug/theme-header.html" %}
+			{% include "debug/theme-navbar.html" %}
 		</header>
 
 		<!-- Main -->
