--- a/templates/debug/theme-sctn-main.html
+++ b/templates/debug/theme-sctn-main.html
@@ -34,66 +34,48 @@
 
 		<!-- Header -->
 		<header id="header">
-		{% include "debug/theme-header.html" %}
+			{% include "debug/theme-navbar.html" %}
 		</header>
+
+		<!-- Banner -->
+		{% include "debug/theme-banner.html" %}
 
 		<!-- Main -->
 		<section id="main" class="wrapper sidebar right">
 			<div class="inner">
 
-				<header class="major">
-					<h2>Right Sidebar</h2>
-					<p>Sed magna in pharetra ultricies dolor sit amet consequat adipiscing lorem.</p>
-				</header>
-
 				<!-- Content -->
-					<div class="content">
-						<a href="#" class="image fit"><img src="{% static 'images/pic07-1080x720.jpg' %}" alt="" /></a>
-						<h3>Dolore Amet Consequat</h3>
-						<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-						<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-						<h3>Sed Magna Ornare</h3>
-						<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-						<ul>
-							<li>Faucibus orci lobortis ac adipiscing integer.</li>
-							<li>Col accumsan arcu mi aliquet placerat.</li>
-							<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-							<li>Blandit massa non blandit tempor interdum.</li>
-							<li>Lacinia mattis arcu nascetur lobortis.</li>
-						</ul>
-					</div>
+				<div class="content">
+					<!-- Happening - Events, Shows, Calendar -->
+					<section id="two" class="wrapper content-pad">
+						<div class="inner">
+							<div class="features two">
+								{% include "debug/theme-event-tiles.html" %}
+							</div>
+						</div>
+					</section>
+
+					<!-- Recent Content -->
+					{% if page.show_recent or True %}
+					<section id="three" class="wrapper style2">
+						<div class="inner">
+							<h2>Recent Posts</h2>
+							<div class="posts">
+								{% include "debug/theme-recent.html" %}
+							</div>
+						</div>
+					</section>
+					{% endif %}
+				</div>
 
 				<!-- Sidebar -->
-					<div class="sidebar">
-
-						<section>
-							<h3>Magna Feugiat</h3>
-							<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-							<footer>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</footer>
-						</section>
-						<hr />
-						<section>
-							<a href="#" class="image fit"><img src="{% static 'images/pic01-1080x720.jpg' %}" alt="" /></a>
-							<h3>Amet Lorem Tempus</h3>
-							<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-							<footer>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</footer>
-						</section>
-
-					</div>
+				{% include "debug/theme-sidebar.html" %}
 
 			</div>
 		</section>
 
 		<!-- Contact -->
-		{% if page.showContact %}
+		{% if page.show_contact or True %}
 		{% include "includes/contact.html" %}
 		{% endif %}
 
