--- a/templates/debug/theme-sctn-page.html
+++ b/templates/debug/theme-sctn-page.html
@@ -34,7 +34,7 @@
 
 		<!-- Header -->
 		<header id="header">
-		{% include "debug/theme-header.html" %}
+		{% include "debug/theme-navbar.html" %}
 		</header>
 
 		<!-- Main -->
