--- a/templates/includes/contact.html
+++ b/templates/includes/contact.html
@@ -26,8 +26,8 @@
 				</div>
 			</form>
 		</section>
-		{% with youtube=settings.base.ContactSettings.youtube instagram=settings.base.ContactSettings.instagram visit_addr=settings.base.ContactSettings.visit_addr visit_hours=settings.base.ContactSettings.visit_hours %}
-			{% if youtube or instagram or visit_addr %}
+		{% with youtube=settings.base.ContactSettings.youtube instagram=settings.base.ContactSettings.instagram visit=settings.base.ContactSettings.visit_addr mon=settings.base.ContactSettings.open_MON tue=settings.base.ContactSettings.open_TUE wed=settings.base.ContactSettings.open_WED thu=settings.base.ContactSettings.open_THU fri=settings.base.ContactSettings.open_fri sat=settings.base.ContactSettings.open_SAT sun=settings.base.ContactSettings.open_SUN holidays=settings.base.ContactSettings.open_holidays %}
+			{% if youtube or instagram or visit %}
 			<section>
 				<h2>Other ways to reach us</h2>
 				<ul class="bulleted-icons">
@@ -45,25 +45,25 @@
 						<p><a href="https://www.instagram.com/{{ instagram }}">@{{ instagram }}</a></p>
 					</li>
 					{% endif %}
-					{% if visit_addr %}
+					{% if visit %}
 					<li>
 						<span class="icon-wrapper"><span class="icon solid fa-building"></span></span>
-						<h3>Address</h3>
-						{{ visit_addr|linebreaks }}
+						<h3>Club Location</h3>
+						{{ visit|linebreaks }}
 					</li>
 					{% endif %}
 					<li>
 						<span class="icon-wrapper"><span class="icon solid fa-clock"></span></span>
-						<h3>Hours</h3>
+						<h3>Open to Public</h3>
 						<p>
-							MON {{ if visit_hours_MON }}{{ visit_hours_MON }}{{ else }}Closed{{ endif }}<br />
-							TUE {{ if visit_hours_TUE }}{{ visit_hours_TUE }}{{ else }}Closed{{ endif }}<br />
-							WED {{ if visit_hours_WED }}{{ visit_hours_WED }}{{ else }}Closed{{ endif }}<br />
-							THU {{ if visit_hours_THU }}{{ visit_hours_THU }}{{ else }}Closed{{ endif }}<br />
-							FRI {{ if visit_hours_FRI }}{{ visit_hours_FRI }}{{ else }}Closed{{ endif }}<br />
-							SAT {{ if visit_hours_SAT }}{{ visit_hours_SAT }}{{ else }}Closed{{ endif }}<br />
-							SUN {{ if visit_hours_SUN }}{{ visit_hours_SUN }}{{ else }}Closed{{ endif }}<br />
-							<i>{{ if visit_hours_holidays }}{{ visit_hours_holidays }}{{ else }}Holiday hours may differ.{{ endif }}</i>
+							{% if mon %}<b>MON {{ mon }}</b>{% else %}MON <i>Closed</i>{% endif %}<br />
+							{% if tue %}<b>TUE {{ tue }}</b>{% else %}TUE <i>Closed</i>{% endif %}<br />
+							{% if wed %}<b>WED {{ wed }}</b>{% else %}WED <i>Closed</i>{% endif %}<br />
+							{% if thu %}<b>THU {{ thu }}</b>{% else %}THU <i>Closed</i>{% endif %}<br />
+							{% if fri %}<b>FRI {{ fri }}</b>{% else %}FRI <i>Closed</i>{% endif %}<br />
+							{% if sat %}<b>SAT {{ sat }}</b>{% else %}SAT <i>Closed</i>{% endif %}<br />
+							{% if sun %}<b>SUN {{ sun }}</b>{% else %}SUN <i>Closed</i>{% endif %}<br />
+							<i>{% if holidays %}{{ holidays }}{% else %}Holiday hours may differ.{% endif %}</i>
 						</p>
 					</li>
 				</ul>
