--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -30,6 +30,12 @@
         <base target="_blank">
         {% endif %}
 
+		<link rel="icon" type="image/x-icon" href="{% static 'assets/favicon/favicon.ico' %}">
+		<link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/favicon/apple-touch-icon.png' %}">
+		<link rel="icon" type="image/png" sizes="32x32" href="{% static 'assets/favicon//favicon-32x32.png' %}">
+		<link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/favicon//favicon-16x16.png' %}">
+		<link rel="manifest" href="{% static 'assets/favicon/site.webmanifest' %}">
+
         <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}" />
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="{% static 'assets/css/noscript.css' %}" />
