--- a/templates/includes/newsletter-tile.html
+++ b/templates/includes/newsletter-tile.html
@@ -1,6 +1,6 @@
 {% load static wagtailcore_tags %}
 <section class="content">
-    <span class="icon-wrapper major"><span class="icon solid fa-envelope-open-text"><span class="icon-label">Newsletter</span></span></span>
+    <span class="icon-wrapper major"><span class="icon solid fa-envelope-open-text icon-label">Newsletter</span></span>
     <form method="post" action="#">
         <p>Stay up-to-date with our events, shows, and other news related to CMR &amp; NRHS by subscribing to our newsletter.</p>
         <div class="row gtr-uniform">
