--- a/base/templates/base/blocks/heading_block.html
+++ b/base/templates/base/blocks/heading_block.html
@@ -1,3 +1,8 @@
+{% comment %}
+    Content is coming from the StandardBlock StreamField
+    class within `blocks.py`
+{% endcomment %}
+
 {% if self.size == 'h2' %}
     <h2>{{ self.heading_text }}</h2>
 {% elif self.size == 'h3' %}
