--- a/templates/includes/recent.html
+++ b/templates/includes/recent.html
@@ -1,11 +1,11 @@
 {% load static wagtailcore_tags wagtailimages_tags %}
 
-{% for post in recent_posts %}
+{% for post in posts %}
     <section class="post">
         <a href="{% pageurl post %}" class="image"><img src="{% image post.image max-551x297 %}" alt="{{ post.title }}" /></a>
         <div class="content">
             <a href="{% pageurl post %}"><h3>{{ post.title }}</h3></a>
-            <p>{{ post.intro|richtext }}</p>
+            {{ post.intro|richtext }}
             <ul class="actions">
                 <li><a href="{% pageurl post %}" class="button">More</a></li>
             </ul>
