--- a/base/templates/base/includes/copyright_text.html
+++ b/base/templates/base/includes/copyright_text.html
@@ -1,4 +1,4 @@
 {% load wagtailcore_tags %}
 {% if copyright_text %}
-<p class="copyright">&copy; 1973-{% now "Y" %} {{ copyright_text|richtext }}</p>
+<p class="copyright">&copy; 1973-{% now "Y" %} {{ copyright_text }}</p>
 {% endif %}
