--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,12 +11,11 @@
 <html>
 	<head>
 		<title>
-			{% block title %}
-            {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
+            {% block title %}
+				{% firstof page.seo_title page.title %}
             {% endblock %}
             {% block title_suffix %}
-            {% wagtail_site as current_site %}
-            {% if current_site and current_site.site_name %} - {{ current_site.site_name }}{% endif %}
+                | {% firstof settings.base.SiteSettings.title_suffix current_site.site_name wagtail_site %}
             {% endblock %}
 		</title>
 		<meta charset="utf-8" />
