tweaking standard pages and site settings - WIP

--- a/templates/includes/event-tiles.html
+++ b/templates/includes/event-tiles.html
@@ -4,8 +4,10 @@
     <span class="icon-label major-label">Events</span>
     <!-- CONTENT FROM EVENT -->
     <a href="#"><h3>XYZ Event</h3></a>
-    <p>Proin consequat luctus elit, nec blandit tellus ut volutpat magna. mi euismod elementum lectus et consequat etiam lorem etiam sed tempus. Feugiat veroeros lorem ipsum dolor.</p>
-    <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg'%}" alt="Title of promoted content" /></a>
+    <p>
+        <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg'%}" alt="Title of promoted content" /></a>
+        Proin consequat luctus elit, nec blandit tellus ut volutpat magna. Mi euismod elementum lectus et consequat etiam lorem etiam sed tempus. Feugiat veroeros lorem ipsum dolor. Mi euismod elementum lectus et consequat etiam lorem etiam sed tempus.
+    </p>
     <ul class="actions">
         <li><a href="#" class="button small">More</a></li>
         <li><a href="#" class="button small">Calendar</a></li>
@@ -16,8 +18,10 @@
     <span class="icon-wrapper major-label"><span class="icon solid fa-globe-americas"></span></span>
     <span class="icon-label major-label">Shows</span>
     <a href="#"><h3>XYZ Train Show</h3></a>
-    <p>Pellentesque, ornare sapien quis, tristique ante. Proin nec facilisis odio. Integer elementum nunc nec leo interdum, non tristique eros laoreet. Integer vitae erat suscipit commodo.</p>
-    <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg'%}" alt="Title of promoted content" /></a>
+    <p>
+        <a href="#" class="image"><img src="{% static 'images/blank-90x90.jpg'%}" alt="Title of promoted content" /></a>
+        Proin consequat luctus elit, nec blandit tellus ut volutpat magna. Mi euismod elementum lectus et consequat etiam lorem etiam sed tempus. Feugiat veroeros lorem ipsum dolor. Mi euismod elementum lectus et consequat etiam lorem etiam sed tempus.
+    </p>
     <ul class="actions">
         <li><a href="#" class="button small">More</a></li>
         <li><a href="#" class="button small">Calendar</a></li>
